fix row gap in books page

--- a/css/books.scss
+++ b/css/books.scss
@@ -4,7 +4,7 @@
   width: 95%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  row-gap: 6rem;
+  row-gap: 11rem;
   column-gap: 3rem;
   margin-top: 8rem;
 }
